objects/Deposition__c.object
<CustomObject>
    <description>Modify the Format Deposition Name Workflow to format the name field to Clients needs.
Default is: Deponent__r.Name &amp; TEXT(Scheduled_Date__c)</description>
    <fields>
        <fullName>Access_Code_Pin__c</fullName>
        <inlineHelpText>Dial In Number Access Code or Pin</inlineHelpText>
        <label>Access Code / Pin</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Attorney</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Court_Reporter__c</fullName>
        <label>Court Reporter</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depo_Date_Only__c</fullName>
        <inlineHelpText>Date only?</inlineHelpText>
        <label>Depo Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depo_Date_Time__c</fullName>
        <label>Depo Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Depo_End_Date_Time__c</fullName>
        <label>Depo End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Depo_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depo Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deponent_Legacy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deponent (legacy)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depositions(Legacy)</relationshipLabel>
        <relationshipName>Depositions_Legacy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deponent_Name__c</fullName>
        <label>Deponent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deponent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>litify_pm__Role__c.litify_pm__Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Matter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>litify_pm__Role__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition_Completed__c</fullName>
        <label>Deposition Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposition_Deadline__c</fullName>
        <inlineHelpText>The date the deposition must be completed by.</inlineHelpText>
        <label>Deposition Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Notes__c</fullName>
        <label>Deposition Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deposition_Time__c</fullName>
        <formula>TIMEVALUE(Depo_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Dial_In_Number__c</fullName>
        <label>Dial In Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hearing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hearing</label>
        <referenceTo>Hearing__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>litify_pm__Matter__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Needles_Tab_Id__c</fullName>
        <externalId>true</externalId>
        <label>Needles Tab Id</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reschedule_From__c</fullName>
        <label>Reschedule From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Scheduled</fullName>
                    <default>true</default>
                    <label>To Be Scheduled</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testimony__c</fullName>
        <label>Testimony</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Deponent__c</fullName>
        <label>Type of Deponent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deposition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>